--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>
 <li>Reading</li>
 <li>Doing Sports</li>
 </ul>
-<p><a href="/test.html"Test Page</a>
+<p><a href="/test.html"CCA Page</a>
 </body>
 </html>
